Fixed bottom border of the collapse
Navbar still needs to be fixed

--- a/css/angular-styles.css
+++ b/css/angular-styles.css
@@ -1,4 +1,4 @@
-navbar{
+.navbar{
     position: fixed; 
     top: 0; 
     width: 100vw; 
@@ -35,6 +35,3 @@ h6{
     margin: 0;
 }
 
-#schedules {
-    margin-top: 5%;
-}
